# api-proxy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  api-proxy.service  install.sh
.claude/commands/: serve.md
.github/workflows/: ci.yml  pages.yml
examples/: test_proxy.rs
src/: auth.rs  claude.rs  config.rs  gh.rs  lib.rs  main.rs  messages.rs  pages.rs
static/: index.html
tests/: cors.rs  proxy.rs
tests/mocks/: mock_claude.sh  mock_gh.sh
